php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #78531 Crash when using undefined variable as object
Submitted: 2019-09-12 22:34 UTC Modified: 2019-09-12 22:34 UTC
From: dmitry@php.net Assigned: dmitry (profile)
Status: Closed Package: Scripting Engine problem
PHP Version: 7.4Git-2019-09-12 (Git) OS: *
Private report: No CVE-ID: None
 [2019-09-12 22:34 UTC] dmitry@php.net
Description:
------------
PHP crashes on attempt to modify property of undefined variable

Test script:
---------------
<?php
@$undef->a += 5;
var_dump($undef->a);

Expected result:
----------------
int(5)

Actual result:
--------------
crash

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2019-09-12 22:34 UTC] dmitry@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: dmitry
 [2019-09-12 22:43 UTC] dmitry@php.net
Automatic comment on behalf of dmitry@zend.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=51d9f32dbeae2ffdc6e9f01d4f542a8e03f24baf
Log: Fixed bug #78531 (Crash when using undefined variable as object
 [2019-09-12 22:43 UTC] dmitry@php.net
-Status: Assigned +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 23 14:00:02 2026 UTC