Fixed bug #78531 (Crash when using undefined variable as object